Updated template content with personal information.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
 
   <div class="wrapper">
-    {% if page.title == "<b>Anthony</b> Platanios" %}
+    {% if page.title == "<b>Otilia</b> Stretcu" %}
       <div class="site-social">
         <!-- <div class="col three caption">
         {{ site.contact_note }}
@@ -17,7 +17,7 @@
       </div>
     {% else %}
       <div class="site-social">
-        <span class="header-name"><b>Anthony</b> Platanios</span>
+        <span class="header-name"><b>Otilia</b> Stretcu</span>
         <span class="contacticon-small left">
           <a href="mailto:{{ site.email }}"><i class="fa fa-envelope-square"></i></a>
           <a href="https://scholar.google.com/citations?userid={{ site.scholar_userid }}" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar-square"></i></a>
