--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -32,6 +32,8 @@ $green:         #11D68B;
 $lime_green:    #B7D12A;
 $purple:        #B509AC;
 $brown_orange:  #C68646;
+$cv_green:      #829c5c;
+$web_green:     #5ea02e;
 
 
 $grey-color-dark:   #333;  /* footer */
@@ -39,7 +41,7 @@ $grey-color-light:  #ddd;  /* navigation bar border */
 $text-color:        #666;
 
 /* Set theme color *************************/
-$theme-color:   $brown_orange;
+$theme-color:   $web_green;
 
 
 /************************************************************/
