--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -108,6 +108,9 @@
         {% if entry.website %}
           <a class="badge grey waves-effect font-weight-light mr-1" href="{{ entry.website }}" target="_blank">Website</a>
         {% endif %}
+        {% if entry.video %}
+          <a class="badge grey waves-effect font-weight-light mr-1" href="{{ entry.video }}" target="_blank">Video</a>
+        {% endif %}
       </div>
     
       {% if entry.abstract %}
